@@ -1,0 +1,5 @@
+from types import NoneType
+# Traverse API.
+
+grammar = {'parent': [],
+           'find': [[str, unicode]]}
